<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.centum.android.molescan.utils.styledviews.RobotLightTextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/new_comment"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="26sp"
        android:gravity="center"
        android:background="#ff222222"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:id="@+id/results_textView"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name_textView"
        android:textSize="18sp"
        android:layout_alignTop="@+id/results_textView"
        android:layout_toRightOf="@+id/results_textView"
        android:layout_toEndOf="@+id/results_textView"
        android:layout_marginLeft="8dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="16dp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:id="@+id/scrollView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_above="@+id/ok_button"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/comments_textView"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/name_textView"
            android:layout_alignEnd="@+id/name_textView"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_alignLeft="@+id/results_textView"
            android:layout_alignStart="@+id/results_textView"
            android:layout_marginBottom="16dp" />
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comments"
        android:id="@+id/textView4"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_above="@+id/scrollView"
        android:layout_alignLeft="@+id/scrollView"
        android:layout_alignStart="@+id/scrollView" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/textView4"
        android:layout_below="@+id/results_textView"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/imageView" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:indeterminate="true" />
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/ok"
        android:id="@+id/ok_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="?android:attr/selectableItemBackground" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dip"
        android:id="@+id/textView3"
        android:layout_alignTop="@+id/ok_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/darker_gray" />

</RelativeLayout>